add example