@@ -11,10 +11,10 @@ public class Sample1 {
         } catch (InterruptedException e) {}
     }
     public static void main(String[] args) {
-        int MAX=10000000;
+        int MAX=1000;
         for(var i=0; i<MAX; i++) {
-            //new Thread(Sample1::doWork).start();
-            Thread.startVirtualThread(Sample1::doWork);
+            new Thread(Sample1::doWork).start();
+            //Thread.startVirtualThread(Sample1::doWork);
         }
         try {
             Thread.sleep(3000);
